--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    
+    <!-- header: intestazione con informazioni insegnante e documento -->  
     <header>
       <h1>
         Incremental and Decremental Support Vector Machine Learning
@@ -25,7 +25,10 @@
         <i>gert@jhu.edu</i>
       </div>
     </header>
+    <!-- /header -->
 
+
+    <!-- corpo principale del documento -->
     <main>
       <h2>
         Abstract
@@ -41,15 +44,22 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tempore deserunt porro cum at quam minus fugit! Esse, nesciunt quisquam, cumque commodi in ipsum officia aut eveniet explicabo, quidem similique?
           </p>
+
+          <img src="https://docs.opencv.org/2.4/_images/optimal-hyperplane.png" alt="grafico di optimal hyperlane">
         </li>
       </ol>
 
     </main>
 
+    <!-- provo dei parametri deprecati per stilizzare il contenuto -->
 
     <footer>
 
+      <a href="https://www.wikiwand.com/en/Support_vector_machine" target="_blank">Go to Wikipedia to know more</a>
 
+      <div align="center">
+        Made with &#10084; by Gabriel
+      </div>
     </footer>
 
   </body>
